--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+body{
+  background-color: grey;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.intro{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 1.5rem;
+}
+
+.lets-talk{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.contact-info{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.projects-heading{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.projects{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.5rem;
+}
+
+.wq-details{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 3rem;
+}
+
+.wq-pic{
+  height: 12rem;
+  width: 14rem;
+  margin-right: 3rem;
+}
+
+.il-details{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 3rem;
+}
+
+.il-pic {
+  height: 12rem;
+  width: 14rem;
+  margin-left: 3rem;
+}
+
+
+.resume{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.btn{
+  padding: 1rem 3rem ;
+  border-radius: 50%;
+}
+
+.skills, .about{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
 }
