--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,31 @@
 
 body{
   background-color: grey;
+  background-image: url(./images/mountain.jpg);
+}
+
+.head{
+  padding-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .intro{
   font-family: 'Courier New', Courier, monospace;
   color: white;
-  border: 1px solid white;
   height: 4rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+}
+
+.gap{
+  margin-left: 1rem;
 }
 
 .nav{
@@ -20,13 +35,12 @@ body{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 1.5rem;
+  margin-top: 5rem;
 }
 
 .lets-talk{
   font-family: 'Courier New', Courier, monospace;
   color: white;
-  border: 1px solid white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,7 +51,6 @@ body{
 .contact-info{
   font-family: 'Courier New', Courier, monospace;
   color: white;
-  border: 1px solid white;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -103,11 +116,27 @@ body{
 
 .btn{
   padding: 1rem 3rem ;
-  border-radius: 50%;
 }
 
-.skills, .about{
+.skills{
   font-family: 'Courier New', Courier, monospace;
   color: white;
   border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+}
+
+.about{
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
 }
