--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 body{
-  background-color: grey;
+  /* background-color: grey; */
   color: white;
   background-image: url(./images/mountain.jpg);
 }
@@ -39,8 +39,14 @@ body{
   margin-top: 5rem;
 }
 
+
 a{
+  color: inherit;
   text-decoration: none;
+}
+
+a:hover {
+  color: orange;
 }
 
 .lets-talk{
