--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,9 @@ a:hover {
   color: white;
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+
 }
 
 .btn{
@@ -152,6 +154,8 @@ a:hover {
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
+  margin-left: 20%;
+  margin-right: 20%;
   padding-bottom: 1rem;
 }
 
@@ -160,8 +164,16 @@ a:hover {
   color: white;
   border: 1px solid white;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
+  margin-left: 20%;
+  margin-right: 20%;
   padding-bottom: 1rem;
+}
+
+.about-p{
+  margin-left: 20%;
+  margin-right: 20%;
 }
