--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,15 @@ a:hover {
   margin-right: 10%;
 }
 
+.wq{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.wq-project-about{
+  margin-bottom: 2rem;
+}
+
 .project-about{
   margin-bottom: 1rem;
 }
@@ -99,7 +108,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50%
+  width: 50%;
 }
 
 .wq-pic{
